[package]
name = "size-display"
version = "0.1.4"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"
description = "Display file sizes in human-readable form"
license = "MIT"
repository = "https://github.com/germangb/size-display.git"
keywords = ["size", "file", "display"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
